Fix mozilla-account-promo link contrast (#16128)

--- a/media/css/mozorg/mozilla-account-promo.scss
+++ b/media/css/mozorg/mozilla-account-promo.scss
@@ -125,10 +125,13 @@ $promo-sm-mq: 400px;
         }
     }
 
-    a {
+    a:link,
+    a:visited {
         color: $color-white;
 
-        &:hover {
+        &:hover,
+        &:focus,
+        &:active {
             color: $color-white;
         }
     }
